[gd_scene load_steps=2 format=3 uid="uid://dhvk1nkr3qjsa"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_hy24m"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hy24m")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 50.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "Do You Even Kart?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="PlayerNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player Name:"

[node name="PlayerName" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter your name"

[node name="ColorPickerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player Color:"

[node name="ColorPicker" type="ColorPickerButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Select Color"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Host Game"

[node name="IPAddressLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Server IP Address:"

[node name="IPAddress" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter server IP"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Join Game"

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.988235, 0.211765, 0.239216, 1)
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]